--- a/online-shop/src/app/feature/products/table-container/table-container.component.html
+++ b/online-shop/src/app/feature/products/table-container/table-container.component.html
@@ -1,1 +1,4 @@
-<app-table [data]="products" (delete)="deleteProduct($event)"></app-table>
+<button *ngIf="isAdmin()" mat-icon-button color="primary" (click)="openModalDialog()">
+  <mat-icon>add</mat-icon>
+</button>
+<app-table [data]="products" (delete)="deleteProduct($event)" (updatedProduct)="updateProduct($event)" [isAdmin]="isAdmin()"></app-table>
