--- a/online-shop/src/app/feature/products/table/table.component.html
+++ b/online-shop/src/app/feature/products/table/table.component.html
@@ -1,28 +1,69 @@
-<table mat-table [dataSource]="displayedColumns">
+<!--<table mat-table [dataSource]="displayedColumns">-->
+<!--  <ng-container matColumnDef="id">-->
+<!--    <th mat-header-cell *matHeaderCellDef> Id </th>-->
+<!--    <td mat-cell *matCellDef="let element"> {{element.id}} </td>-->
+<!--  </ng-container>-->
+
+<!--  <ng-container matColumnDef="name">-->
+<!--    <th mat-header-cell *matHeaderCellDef> Name </th>-->
+<!--    <td mat-cell *matCellDef="let element"> {{element.name}} </td>-->
+<!--  </ng-container>-->
+
+<!--  <ng-container matColumnDef="category">-->
+<!--    <th mat-header-cell *matHeaderCellDef> Category </th>-->
+<!--    <td mat-cell *matCellDef="let element"> {{element.category}} </td>-->
+<!--  </ng-container>-->
+
+<!--  <ng-container matColumnDef="price">-->
+<!--    <th mat-header-cell *matHeaderCellDef> Price </th>-->
+<!--    <td mat-cell *matCellDef="let element"> {{element.price | currency: 'HUF'}} </td>-->
+<!--  </ng-container>-->
+
+<!--  <ng-container matColumnDef="delete">-->
+<!--    <button mat-fab color="accent" aria-label="delete">-->
+<!--      <mat-icon>delete</mat-icon>-->
+<!--    </button>-->
+<!--  </ng-container>-->
+
+<!--</table>-->
+
+
+<table mat-table [dataSource]="data" class="mat-elevation-z8">
+
+  <!-- Id Column -->
   <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> Id </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    <th mat-header-cell *matHeaderCellDef> ID </th>
+    <td (click)="openModalDialog(element.id)" mat-cell *matCellDef="let element"> {{element.id}} </td>
   </ng-container>
 
+  <!-- Name Column -->
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <th mat-header-cell *matHeaderCellDef> NAME </th>
+    <td (click)="openModalDialog(element.id)" mat-cell *matCellDef="let element"> {{element.name}} </td>
   </ng-container>
 
+  <!-- Category Column -->
   <ng-container matColumnDef="category">
-    <th mat-header-cell *matHeaderCellDef> Category </th>
-    <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+    <th mat-header-cell *matHeaderCellDef> CATEGORY </th>
+    <td (click)="openModalDialog(element.id)" mat-cell *matCellDef="let element"> {{element.category}} </td>
   </ng-container>
 
+  <!-- Price Column -->
   <ng-container matColumnDef="price">
-    <th mat-header-cell *matHeaderCellDef> Price </th>
-    <td mat-cell *matCellDef="let element"> {{element.price | currency: 'HUF'}} </td>
+    <th mat-header-cell *matHeaderCellDef> PRICE </th>
+    <td (click)="openModalDialog(element.id)" mat-cell *matCellDef="let element">{{element.price | currency: 'HUF'}}</td>
   </ng-container>
 
+  <!-- Delete Column -->
   <ng-container matColumnDef="delete">
-    <button mat-fab color="accent" aria-label="delete">
-      <mat-icon>delete</mat-icon>
-    </button>
+    <th mat-header-cell *matHeaderCellDef class = "delete-column-width"></th>
+    <td mat-cell *matCellDef="let element">
+      <button *ngIf="isAdmin" mat-fab color="primary" aria-label="Example icon button with a delete icon" (click)="deleteProduct(element.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
   </ng-container>
 
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
